# politocean_vision

./: .gitignore  CMakeLists.txt  README.md
libs/capture/: CMakeLists.txt  capture.cpp  capture.hpp
src/: Photomosaic.py  PolitoceanShapes.cpp  grabcut.cpp  main.cpp  shape.cpp
